글 수정, 삭제, 등록시 nickname값 뜨게 테이블 추가 및 컨트롤러,html수정 (1차 수정본)

--- a/Project_commu2/src/main/resources/application.properties
+++ b/Project_commu2/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=8024
-spring.thymeleaf.cache=false
 
 # mariadb server connect
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -19,3 +18,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+# thymeleaf
+spring.thymeleaf.enabled=true
+spring.thymeleaf.cache=false
+
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
