--- a/Project_commu2/build.gradle
+++ b/Project_commu2/build.gradle
@@ -23,9 +23,11 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
+		implementation 'org.springframework.boot:spring-boot-starter-validation'
 	
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -33,11 +35,26 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.2'
+		implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'   
+		
 	// https://mvnrepository.com/artifact/commons-io/commons-io
 	implementation group: 'commons-io', name: 'commons-io', version: '2.13.0'
 
 	// https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
 	implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.5'
+	/////// 채팅 도전
+	// https://mvnrepository.com/artifact/org.springframework/spring-web
+	implementation group: 'org.springframework', name: 'spring-web', version: '6.0.12'
+	
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-actuator
+implementation group: 'org.springframework.boot', name: 'spring-boot-actuator', version: '3.1.4'
+	
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
+implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.1.4'
+	
+	// https://mvnrepository.com/artifact/org.springframework.data/spring-data-redis
+implementation group: 'org.springframework.data', name: 'spring-data-redis', version: '3.1.4'
+	
 }
 
 tasks.named('test') {
